--- a/index.html
+++ b/index.html
@@ -1,14 +1,176 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Biker-Zone</title>
-  <!-- Tailwind cdn -->
+  <!-- Daisy UI cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
   
+  <!-- Tailwind cdn -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+            'bike-primary': '#E76F51',
+            'bike-primary-bg': 'rgba(231, 111, 81, 0.1)',
+          }
+        }
+      }
+    }
+  </script>
 </head>
 <body>
-  
+  <!-- Header Start -->
+  <header class="md:container md:mx-auto">
+    <!-- Navbar -->
+    <div class="navbar bg-base-100">
+      <div class="flex-1">
+        <div class="dropdown">
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h8m-8 6h16" />
+            </svg>
+          </div>
+          <ul
+            tabindex="0"
+            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+            <li><a>Home</a></li>
+            <li><a>Shop</a></li>
+            <li><a>News</a></li>
+            <li><a>Contact</a></li>
+          </ul>
+        </div>
+        <a class="text-xl font-bold">Biker-Zone</a>
+      </div>
+      <div class="navbar-center hidden lg:flex flex-grow-1">
+        <ul class="menu menu-horizontal px-1">
+          <li><a>Home</a></li>
+          <li><a>Shop</a></li>
+          <li><a>News</a></li>
+          <li><a>Contact</a></li>
+        </ul>
+      </div>
+      <div class="">
+        <a class="btn bg-bike-primary text-white px-12">Login</a>
+      </div>
+    </div>
+    <!-- Hero Section -->
+    <div class="carousel  md:h-96 bg-bike-primary-bg flex">
+      <!-- Slide 1 -->
+      <div id="slide1" class="carousel-item relative w-full">
+
+       <div class="md:flex md:items-center p-24 w-full md:justify-between">
+         <!-- text content -->
+         <div class="flex flex-col justify-center space-y-5 flex-1">
+          <h1 class="text-5xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+          <p>Amet minim mollit non deserunt ullamco 
+            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            <div class="">
+              <a class="btn bg-bike-primary text-white px-12">Purchase</a>
+            </div>
+         </div>
+        <!-- img content -->
+        <div class="flex-1 flex justify-end">
+          <img class="w-96 h-72"
+          src="images/slider/bike1.png"
+          class="w-full" />
+        </div>
+       </div>
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+          <a href="#slide3" class="btn btn-circle">❮</a>
+          <a href="#slide2" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+      <!-- Slide 2 -->
+      <div id="slide2" class="carousel-item relative w-full">
+
+        <div class="md:flex md:items-center p-24 w-full md:justify-between">
+          <!-- text content -->
+          <div class="flex flex-col justify-center space-y-5 flex-1">
+           <h1 class="text-5xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+           <p>Amet minim mollit non deserunt ullamco 
+             est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+             <div class="">
+               <a class="btn bg-bike-primary text-white px-12">Purchase</a>
+             </div>
+          </div>
+         <!-- img content -->
+         <div class="flex-1 flex justify-end">
+           <img class="w-96 h-72"
+           src="images/slider/bike2.png"
+           class="w-full" />
+         </div>
+        </div>
+         <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+           <a href="#slide1" class="btn btn-circle">❮</a>
+           <a href="#slide3" class="btn btn-circle">❯</a>
+         </div>
+       </div>
+      <!-- Slide 3 -->
+      <div id="slide3" class="carousel-item relative w-full">
+
+        <div class="md:flex md:items-center p-24 w-full md:justify-between">
+          <!-- text content -->
+          <div class="flex flex-col justify-center space-y-5 flex-1">
+           <h1 class="text-5xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+           <p>Amet minim mollit non deserunt ullamco 
+             est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+             <div class="">
+               <a class="btn bg-bike-primary text-white px-12">Purchase</a>
+             </div>
+          </div>
+         <!-- img content -->
+         <div class="flex-1 flex justify-end">
+           <img class="w-96 h-72"
+           src="images/slider/bike3.png"
+           class="w-full" />
+         </div>
+        </div>
+         <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+           <a href="#slide2" class="btn btn-circle">❮</a>
+           <a href="#slide1" class="btn btn-circle">❯</a>
+         </div>
+       </div>
+    </div>
+     
+  </header>
+  <!-- Main Start -->
+  <main>
+    <!-- Featured Bikes Section -->
+     <section>
+
+     </section>
+     <!-- Latest News Section -->
+      <section>
+
+      </section>
+      <!-- Clients Section -->
+       <section>
+
+       </section>
+       <!-- Question Section -->
+        <section>
+
+        </section>
+     
+  </main>
+  <!-- Footer Start -->
+  <footer>
+
+  </footer>
 </body>
 </html>
