--- a/index.html
+++ b/index.html
@@ -149,10 +149,16 @@
      
   </header>
   <!-- Main Start -->
-  <main>
+  <main class="md:container md:mx-auto">
     <!-- Featured Bikes Section -->
-     <section>
-
+     <section class="text-center my-40">
+          <h1 class="text-3xl font-bold">Fetured Bikes In This Year</h1>
+          <p class="text-red-600 text-xs mb-6">Best bike collection</p>
+        <div class="flex flex-col items-center md:flex-row justify-evenly">
+          <div><img src="images/others/feature-bike.png" alt=""></div>
+          <div><img src="images/others/feature-bike.png" alt=""></div>
+          <div><img src="images/others/feature-bike.png" alt=""></div>
+        </div>
      </section>
      <!-- Latest News Section -->
       <section>
