--- a/index.html
+++ b/index.html
@@ -161,8 +161,58 @@
         </div>
      </section>
      <!-- Latest News Section -->
-      <section>
-
+      <section class="mb-40">
+          <div class="text-center mb-16">
+            <h1 class="text-3xl font-bold">Latest News</h1>
+          </div>
+          <!-- Card Container -->
+           <div class="md:grid grid-cols-2 lg:grid-cols-3 gap-6 items-center justify-items-center space-y-4 md:space-y-0">
+            <!-- Card 1 -->
+            <div class="card bg-base-100 w-96 shadow-xl">
+              <figure>
+                <img class="pt-5"
+                  src="images/others/latest1.png"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body space-y-2">
+                <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn bg-bike-primary text-white">Read More</button>
+                </div>
+              </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="card bg-base-100 w-96 shadow-xl">
+              <figure>
+                <img class="pt-5"
+                  src="images/others/latest2.png"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body space-y-2">
+                <h2 class="card-title">Motorcycles & Scooters</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn bg-bike-primary text-white">Read More</button>
+                </div>
+              </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="card bg-base-100 w-96 shadow-xl">
+              <figure>
+                <img class="pt-5"
+                  src="images/others/latest3.png"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body space-y-2">
+                <h2 class="card-title">2021 Honda CBR500R</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn bg-bike-primary text-white">Read More</button>
+                </div>
+              </div>
+            </div>
+           </div>
       </section>
       <!-- Clients Section -->
        <section>
