--- a/index.html
+++ b/index.html
@@ -321,7 +321,53 @@
        </section>
        <!-- Question Section -->
         <section>
-
+          <div class="text-center mb-16">
+            <h1 class="text-3xl font-bold">Frequently Asked<span class="text-bike-primary">Question</span></h1>
+           </div>
+           <!-- Question Container -->
+            <div class="md:flex justify-between items-center mb-40 md:gap-6">
+             <!-- Image -->
+              <div class="w-96"><img src="images/others/faq.png" alt="">
+              </div>
+              <!-- Question -->
+               <div class="w-[50%] space-y-4">
+                <!-- Ques 1 -->
+                <div class="collapse collapse-arrow bg-base-200">
+                  <input type="radio" name="my-accordion-2"/>
+                  <div class="collapse-title text-xl font-medium">What are the most important things I should
+                    know about riding a bike?</div>
+                  <div class="collapse-content">
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                  </div>
+                </div>
+                <!-- Ques 2 -->
+                <div class="collapse collapse-arrow bg-base-200">
+                  <input type="radio" name="my-accordion-2" />
+                  <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                    new one?</div>
+                  <div class="collapse-content">
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                  </div>
+                </div>
+                <!-- Ques 3 -->
+                <div class="collapse collapse-arrow bg-base-200">
+                  <input type="radio" name="my-accordion-2" />
+                  <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                  <div class="collapse-content">
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                  </div>
+                </div>
+                <!-- Ques 4 -->
+                <div class="collapse collapse-arrow bg-base-200">
+                  <input type="radio" name="my-accordion-2" />
+                  <div class="collapse-title text-xl font-medium">What rules should I follow when riding my bike?</div>
+                  <div class="collapse-content">
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                  </div>
+                </div>
+               </div>
+              
+            </div>
         </section>
      
   </main>
