--- a/index.html
+++ b/index.html
@@ -322,15 +322,15 @@
        <!-- Question Section -->
         <section>
           <div class="text-center mb-16">
-            <h1 class="text-3xl font-bold">Frequently Asked<span class="text-bike-primary">Question</span></h1>
+            <h1 class="text-3xl font-bold">Frequently Asked <span class="text-bike-primary">Question</span></h1>
            </div>
            <!-- Question Container -->
-            <div class="md:flex justify-between items-center mb-40 md:gap-6">
+            <div class=" md:flex md:justify-between justify-items-center mb-40 md:gap-6">
              <!-- Image -->
-              <div class="w-96"><img src="images/others/faq.png" alt="">
+              <div class="w-96 mb-10 md:mb-0 lg:mb-0"><img src="images/others/faq.png" alt="">
               </div>
               <!-- Question -->
-               <div class="w-[50%] space-y-4">
+               <div class="px-4 md:w-[50%] space-y-4">
                 <!-- Ques 1 -->
                 <div class="collapse collapse-arrow bg-base-200">
                   <input type="radio" name="my-accordion-2"/>
@@ -373,7 +373,32 @@
   </main>
   <!-- Footer Start -->
   <footer>
-
+    <footer class="footer bg-black text-white p-10 md:px-28 lg:px-64 justify-between items-center">
+     <!-- Left footer -->
+      <div class="space-y-4">
+        <nav class="md:flex gap-6">
+          <h6 class="text-lg">Download Now</h6>
+          <h6 class="text-lg">License</h6>
+        </nav>
+        <nav class="md:flex gap-6">
+          <a class="link link-hover">About</a>
+          <a class="link link-hover">Features</a>
+          <a class="link link-hover">Pricing</a>
+          <a class="link link-hover">Careers</a>
+          <a class="link link-hover">Help</a>
+          <a class="link link-hover">Privacy Policy</a>
+        </nav>
+         <p>© 2020 bike. All rights reserved</p>
+      </div>
+      <!-- Right Footer -->
+      <div>
+        <h5 class="text-lg">Get the App</h5>
+        <br>
+        <img class="w-32" src="images/others/ios.png" alt="">
+        <img class="w-32" src="images/others/android.png" alt="">
+      </div> 
+        
+    </footer>
   </footer>
 </body>
 </html>
